// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`straight mb lock holds ball 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "greenArrow",
    "iLeft2": "greenArrow",
    "iLeft3": "greenArrow",
    "iLeft4": "greenArrow",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "yellowArrow",
    "iRight2": "yellowArrow",
    "iRight3": "yellowArrow",
    "iRight4": "yellowArrow",
    "iRight5": "yellowArrow",
    "iSS1": Object {
      "fill": [Function],
    },
    "iSS2": Object {
      "fill": [Function],
    },
    "iSS3": Object {
      "fill": [Function],
    },
    "iSS4": Object {
      "fill": [Function],
    },
    "iSS5": Object {
      "fill": [Function],
    },
    "iSS6": Object {
      "fill": [Function],
    },
    "iSS7": Object {
      "fill": [Function],
    },
    "iSpinner": "",
    "iUpper21": "orangeArrow",
    "iUpper22": "orangeArrow",
    "iUpper31": "blueArrow",
    "iUpper32": "blueArrow",
    "iUpper33": "blueArrow",
    "ignoreSkillsot": Set {
      Switch {
        "_state": false,
        "column": 0,
        "lastChange": 53612,
        "lastClosed": 48957,
        "lastOpened": 53612,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "ramp made",
        "row": 7,
      },
      Switch {
        "_state": false,
        "column": 5,
        "lastChange": 0,
        "lastClosed": undefined,
        "lastOpened": undefined,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
    },
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [],
    "lLaneUpper3": Array [],
    "lLaneUpper4": Array [],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": false,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "children": Array [
      Object {
        "children": Array [],
        "name": "DropBank85",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank86",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank87",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank88",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank89",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank90",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "name": "EosPulse92",
            "state": Object {},
          },
        ],
        "name": "MachineOverrides91",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "name": "ClearHoles95",
                "state": Object {},
              },
              Object {
                "children": Array [],
                "name": "Spinner97",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 300,
                },
              },
              Object {
                "children": Array [],
                "name": "LeftOrbit98",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "children": Array [],
                "name": "PlayerOverrides99",
                "state": Object {},
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter102",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter103",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter104",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter105",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter106",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter107",
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete101",
                    "state": Object {},
                  },
                  Object {
                    "children": Array [],
                    "name": "StraightMb111",
                    "state": Object {
                      "lockPost": false,
                      "state": Object {
                        "_": "starting",
                        "secondBallLocked": false,
                        "starting": true,
                      },
                    },
                  },
                  Object {
                    "children": Array [],
                    "name": "Skillshot112",
                    "state": Object {
                      "curAward": 0,
                      "shooterOpen": true,
                    },
                  },
                ],
                "name": "Ball100",
                "state": Object {
                  "miniReady": false,
                },
              },
            ],
            "name": "Player94",
            "state": Object {
              "chips": 1,
              "closeShooter": false,
              "curMbMode": "StraightMb111",
              "laneChips": Array [
                true,
                false,
                false,
                false,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "poker": undefined,
              "rampUp": true,
              "score": 40000,
            },
          },
        ],
        "name": "Game93",
        "state": Object {
          "ballNum": 1,
        },
      },
    ],
    "name": "Machine84",
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 0,
        "lastChange": 53612,
        "lastClosed": 48957,
        "lastOpened": 53612,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "ramp made",
        "row": 7,
      },
      "lockDown": true,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb ramp lowers 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "",
    "iCenter2": "",
    "iCenter3": "",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSS7": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [],
    "lLaneUpper3": Array [],
    "lLaneUpper4": Array [],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [
      "Red",
    ],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [
      "White",
    ],
    "lRampStartMb": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [
      "White",
    ],
    "lShooterStartHand": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "children": Array [
      Object {
        "children": Array [],
        "name": "DropBank11",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank12",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank13",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank14",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank15",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank16",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "name": "EosPulse18",
            "state": Object {},
          },
        ],
        "name": "MachineOverrides17",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "name": "ClearHoles21",
                "state": Object {},
              },
              Object {
                "children": Array [],
                "name": "Poker22",
                "state": Object {
                  "bet": 100,
                  "closeShooter": false,
                  "dealerCardsUsed": Array [],
                  "dealerHand": Array [
                    Object {
                      "flipped": true,
                      "num": 3,
                      "suit": "h",
                    },
                    Object {
                      "flipped": true,
                      "num": 4,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "flipped": false,
                      "num": 5,
                      "suit": "s",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "d",
                    },
                    Object {
                      "flipped": false,
                      "num": 4,
                      "suit": "h",
                    },
                    Object {
                      "flipped": true,
                      "num": 2,
                      "suit": "c",
                    },
                  ],
                  "dealerHandDesc": "Pair",
                  "newMbs": Array [
                    Array [
                      "StraightMb",
                      Array [
                        Object {
                          "num": 7,
                          "suit": "s",
                        },
                        Object {
                          "num": 8,
                          "suit": "c",
                        },
                        Object {
                          "num": 9,
                          "suit": "c",
                        },
                        Object {
                          "num": 10,
                          "suit": "s",
                        },
                        Object {
                          "num": 11,
                          "suit": "s",
                        },
                      ],
                    ],
                  ],
                  "newModes": Array [],
                  "playerCardsUsed": Array [],
                  "playerHand": Array [
                    Object {
                      "num": 7,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "s",
                    },
                    Object {
                      "num": 8,
                      "suit": "c",
                    },
                    Object {
                      "num": 9,
                      "suit": "c",
                    },
                    Object {
                      "num": 10,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "c",
                    },
                  ],
                  "playerHandDesc": "Straight",
                  "playerWins": undefined,
                  "pot": 1000,
                  "slots": Array [
                    Object {
                      "num": 1,
                      "suit": "d",
                    },
                    null,
                    null,
                    null,
                    Object {
                      "num": 1,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                    Object {
                      "num": 3,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "d",
                    },
                    null,
                    null,
                    Object {
                      "num": 11,
                      "suit": "h",
                    },
                    Object {
                      "num": 8,
                      "suit": "s",
                    },
                    Object {
                      "num": 10,
                      "suit": "h",
                    },
                    Object {
                      "num": 12,
                      "suit": "d",
                    },
                    Object {
                      "num": 8,
                      "suit": "d",
                    },
                    Object {
                      "num": 10,
                      "suit": "d",
                    },
                    Object {
                      "num": 12,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "h",
                    },
                    Object {
                      "num": 9,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "c",
                    },
                  ],
                  "step": 7,
                },
              },
              Object {
                "children": Array [],
                "name": "Spinner23",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 300,
                },
              },
              Object {
                "children": Array [],
                "name": "LeftOrbit24",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "children": Array [],
                "name": "PlayerOverrides25",
                "state": Object {},
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter28",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter29",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter30",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter31",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter32",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter33",
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete27",
                    "state": Object {},
                  },
                ],
                "name": "Ball26",
                "state": Object {
                  "miniReady": false,
                },
              },
            ],
            "name": "Player20",
            "state": Object {
              "chips": 1,
              "closeShooter": false,
              "curMbMode": undefined,
              "laneChips": Array [
                true,
                false,
                false,
                false,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "poker": "Poker22",
              "rampUp": true,
              "score": 35000,
            },
          },
        ],
        "name": "Game19",
        "state": Object {
          "ballNum": 1,
        },
      },
    ],
    "name": "Machine10",
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": true,
        "column": 3,
        "lastChange": 30053,
        "lastClosed": 30053,
        "lastOpened": undefined,
        "minOffTime": 150,
        "minOnTime": 10,
        "name": "right 3",
        "row": 2,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb short plunge doesnt trigger skillsot 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "greenArrow",
    "iLeft2": "greenArrow",
    "iLeft3": "greenArrow",
    "iLeft4": "greenArrow",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "yellowArrow",
    "iRight2": "yellowArrow",
    "iRight3": "yellowArrow",
    "iRight4": "yellowArrow",
    "iRight5": "yellowArrow",
    "iSS1": Object {
      "fill": [Function],
    },
    "iSS2": Object {
      "fill": [Function],
    },
    "iSS3": Object {
      "fill": [Function],
    },
    "iSS4": Object {
      "fill": [Function],
    },
    "iSS5": Object {
      "fill": [Function],
    },
    "iSS6": Object {
      "fill": [Function],
    },
    "iSS7": Object {
      "fill": [Function],
    },
    "iSpinner": "",
    "iUpper21": "orangeArrow",
    "iUpper22": "orangeArrow",
    "iUpper31": "blueArrow",
    "iUpper32": "blueArrow",
    "iUpper33": "blueArrow",
    "ignoreSkillsot": Set {
      Switch {
        "_state": false,
        "column": 0,
        "lastChange": 53612,
        "lastClosed": 48957,
        "lastOpened": 53612,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "ramp made",
        "row": 7,
      },
      Switch {
        "_state": false,
        "column": 5,
        "lastChange": 104642,
        "lastClosed": 104317,
        "lastOpened": 104642,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
    },
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [],
    "lLaneUpper3": Array [],
    "lLaneUpper4": Array [],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": false,
    "shooterDiverter": false,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "children": Array [
      Object {
        "children": Array [],
        "name": "DropBank47",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank48",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank49",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank50",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank51",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank52",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "name": "EosPulse54",
            "state": Object {},
          },
        ],
        "name": "MachineOverrides53",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "name": "ClearHoles57",
                "state": Object {},
              },
              Object {
                "children": Array [],
                "name": "Spinner59",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 300,
                },
              },
              Object {
                "children": Array [],
                "name": "LeftOrbit60",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "children": Array [],
                "name": "PlayerOverrides61",
                "state": Object {},
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter64",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter65",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter66",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter67",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter68",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter69",
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete63",
                    "state": Object {},
                  },
                  Object {
                    "children": Array [],
                    "name": "StraightMb73",
                    "state": Object {
                      "lockPost": false,
                      "state": Object {
                        "_": "starting",
                        "secondBallLocked": false,
                        "starting": true,
                      },
                    },
                  },
                  Object {
                    "children": Array [],
                    "name": "Skillshot74",
                    "state": Object {
                      "curAward": 0,
                      "shooterOpen": false,
                    },
                  },
                ],
                "name": "Ball62",
                "state": Object {
                  "miniReady": false,
                },
              },
            ],
            "name": "Player56",
            "state": Object {
              "chips": 1,
              "closeShooter": false,
              "curMbMode": "StraightMb73",
              "laneChips": Array [
                true,
                false,
                false,
                false,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "poker": undefined,
              "rampUp": true,
              "score": 41010,
            },
          },
        ],
        "name": "Game55",
        "state": Object {
          "ballNum": 1,
        },
      },
    ],
    "name": "Machine46",
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 5,
        "lastChange": 104642,
        "lastClosed": 104317,
        "lastOpened": 104642,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;
